--- a/Webszolgaltatas/Webszolgaltatas/Webszolgaltatas.csproj
+++ b/Webszolgaltatas/Webszolgaltatas/Webszolgaltatas.csproj
@@ -54,6 +54,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Compile>
+    <Compile Include="Entities\CurrencyClass.cs" />
     <Compile Include="Entities\RateDate.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
