--- a/MikroSzimulacio/MikroSzimulacio/MikroSzimulacio.csproj
+++ b/MikroSzimulacio/MikroSzimulacio/MikroSzimulacio.csproj
@@ -46,6 +46,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Entities\BirthProb.cs" />
+    <Compile Include="Entities\DeathProb.cs" />
+    <Compile Include="Entities\Gender.cs" />
+    <Compile Include="Entities\Person.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
